--- a/arch/.config/gtk-3.0/settings.ini
+++ b/arch/.config/gtk-3.0/settings.ini
@@ -1,5 +1,5 @@
 [Settings]
-gtk-theme-name=Raleigh
+gtk-theme-name=Arc-Dark
 gtk-icon-theme-name=Adwaita
 gtk-font-name=System San Francisco Display 10
 gtk-cursor-theme-name=Adwaita
