--- a/.gitignore
+++ b/.gitignore
@@ -44,11 +44,11 @@ src/
 
 # End of https://www.gitignore.io/api/linux,archlinuxpackages
 
-/.config/vivaldi/*
-/.config/ranger/
-/.config/chromium/
-/.config/sublime-text-3/
-/.config/direnv/
+*/.config/vivaldi/*
+.config/ranger/*
+.config/chromium/*
+.config/sublime-text-3/*
+.config/direnv/*
 
 .config/vivaldi/
 
