--- a/.config/i3/config
+++ b/.config/i3/config
@@ -195,8 +195,10 @@ mode "resize" {
 bindsym $mod+r mode "resize"
 
 
-set $bg-color            #2f343f
-set $inactive-bg-color   #2f343f
+#set $bg-color            #2f343f
+#set $inactive-bg-color   #2f343f
+set $bg-color            #212121
+set $inactive-bg-color   #212121
 set $text-color          #f3f4f5
 set $inactive-text-color #676E7D
 set $urgent-bg-color     #E53935
