--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -37,6 +37,7 @@ markup=none
 # The first parameter sets the step (and units to display)
 # The second parameter overrides the mixer selection
 # See the script for details.
+
 [volume]
 #label=VOL
 command=~/.config/i3/blocks.sh 18
@@ -112,13 +113,15 @@ min_width=CPU:9%
 command=~/.config/i3/blocks.sh 6
 interval=10
 
-# Date Time
-#
 [time]
 #command=date '+%Y-%m-%d %H:%M:%S'
-command=date '+  %V    %a %m.%d   %H:%M  '
+command=date '+  %V    %a %m.%d   %H:%M '
 interval=5
-#
+
+[weather]
+command=~/.config/i3/weather.sh
+interval=900
+
 # Generic media player support
 #
 # This displays "ARTIST - SONG" if a music is playing.
