Did some i3 stuff, added cpu temp for ls sensors, and weather with city/country as parameter

--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -98,7 +98,11 @@ interval=30
 command=~/.config/i3/blocks.sh 1
 interval=5
 min_width=CPU:9%
-#separator=false
+separator=false
+
+[cpu_temp]
+command=~/.config/i3/blocks.sh 15
+interval=5
 
 #[load_average]
 #interval=10
@@ -119,8 +123,11 @@ command=date '+  %V    %a %m.%d   %H:%M '
 interval=5
 
 [weather]
-command=~/.config/i3/weather.sh
+command=sh -c "~/.config/i3/weather.sh 'trondheim' 'NO'"
 interval=900
+
+[separator]
+
 
 # Generic media player support
 #
